# guard

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  PILOT.md  README.md  pyproject.toml  quickstart.ps1  quickstart.sh
.github/workflows/: ci.yml
aegis/: AGENTDOJO.md  ARCHITECTURE.md  CEDAR_ANALYSIS.md  CONFINEMENT.md  REDTEAM.md  RULEBOOK.md  THREAT_MODEL.md  __init__.py  agentdojo_eval.py  approvals.py  approvals_test.py  audit.py  audit_worm_test.py  budget.py  budget_test.py  cedar_analysis.py  cedar_export.py  compliance.py  confinement.py  confinement_test.py  demo.py  detectors.py  egress_proxy.py  egress_proxy_daemon_test.py  egress_proxy_test.py  engine.py  example_api_loop.py  file_access_test.py  formal.py  formal_smt.py  freeform_q.py  freeform_q_test.py  guard.py  hook.py  ifc.py  ifc_test.py  live_anthropic.py  live_kdb_agent.py  mcp_test.py  model.py  (+40 more)
aegis/deploy/: Dockerfile  MICROVM.md  __init__.py  build_bundle.py  confine_adversarial_test.sh  confine_run.sh  deployment-profile.json  docker-compose.yml  k8s.yaml  landlock_confine.py  landlock_test.sh  seccomp_confine.py
deploy/: docker_up.sh
docs/: Aegis-Executive-Summary.md  Aegis-Frontier-Research-2026-06.md  Aegis-Glossary.md  Aegis-Guardrails-Reference.md  Aegis-How-It-Works.md  Aegis-In-Plain-Terms.md  Aegis-System-Overview.md  Aegis-Worked-Examples.md  CONTROL_FUNCTION_BRIEF.md  Cedar-Evaluation.md  Frontier-Assessment-2026-06.md  Guard-Senior-Review-Changes.md  LAUNCH_READINESS.md  STRUCTURED_QUERY_API.md  TorQ-ops-LLM-Safety.md  blog-deploying-llms-safely.md  kqagent-Authoring-Guard.md
pilot/: ASSESSMENT.md  BREAK_GLASS.md  HANDOFF_adopt_features.md  HANDOFF_agentdojo_full_run.md  HANDOFF_freeform_validation.md  HANDOFF_ifc_validation.md  HANDOFF_validate_compiler_hardening.md  KDB_SYSTEM_THREATS.md  POLICY_AUTHORING_KIT.md  SOAK_RESULTS.md  STAGE34_PDP.md  TOOL_SURFACE_AUDIT.md  WINDOW_JOIN_BOUNDARY.md  adversarial_recall.py  breakglass_test.py  corpus.json  fsp_soak.py  policy.breakglass.json  policy.fsp.json  policy.kdb.template.json  score_structured.py  stage34_pdp.py  stage34_verify.py  validate_structured.py
pilot/demo/: README.md  demo.html  demo_app.py
pilot/realism/: AGENTDOJO_IFC_FINDINGS.md  DEMO_should_shouldnt.md  IFC_VALIDATION.md  REALISM_METHODOLOGY.md  REALISM_RESULTS.md  ROW_ENTITLEMENTS.md  adversarial_soak.py  agentdojo_ifc_decision_evidence.json  attack_corpus.json  corpus_blind.json  demo_server.py  demo_should_shouldnt.py  demo_web.html  ifc_live.py  ifc_soak.py  policy.realism.demo.json  realism_soak.py  rescore.py
tools/: build_aegis_brief.py  build_examples_pdf.py  build_glossary_pdf.py  build_guard_brief_pdf.py  build_kqagent_guard_pdf.py  build_overview_pdf.py  md2pdf.py  md_to_pdf.py  prove_gate.py  q_wsl.cmd  run_agentdojo_official.py  run_overseer_live.py  smoke_install.py  validate_query_proxy_q.py  verify_deployment.py  wsl_setup_venv.sh
